@@ -1,4 +1,15 @@
 2015-10-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
+	    Stefan Liebler  <stli@linux.vnet.ibm.com>
+
+	* sysdeps/unix/sysv/linux/s390/s390-32/syscall_cancel.S: New file.
+	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h (PSEUDO): Redefine
+	to call __syscall_cancel function for cancellable syscalls.
+	(__pthread_get_ip): Add implementation.
+	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h (SYSCALL_CANCEL_ERROR): Add
+	definition.
+	(SYSCALL_CANCEL_ERRNO): Likewise.
+
+2015-10-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
 	* sysdeps/unix/sysv/linux/arm/syscall_cancel.S: New file.
 	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h (PSEUDO): Redefine
